--- a/src/blocks/get/get.scss
+++ b/src/blocks/get/get.scss
@@ -112,6 +112,21 @@
 		font-size: 50px;
 		color: #444;
 		margin-bottom: 60px;
+		
+		&::after {
+			content: ".";
+			color: #F0BE55;
+		}
+		
+		@include media('<=xxs') {
+			font-size: 44px;
+			margin-bottom: 40px;
+		}
+		
+		@include media('<=xxxs') {
+			font-size: 38px;
+			margin-bottom: 30px;
+		}
 	}
 
 	&__play {
